--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,11 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=53257&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | SmartWallex - 加密货币聪明钱信息聚合平台</title>
 <meta name="keywords" content="">
-<meta name="description" content="基于Hugo的测试网站">
-<meta name="author" content="Admin">
+<meta name="description" content="专业的加密货币聪明钱信息聚合平台，提供GitHub项目评测、市场分析和投资洞察">
+<meta name="author" content="ERIC">
 <link rel="canonical" href="http://localhost:53257/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.8fe10233a706bc87f2e08b3cf97b8bd4c0a80f10675a143675d59212121037c0.css" integrity="sha256-j&#43;ECM6cGvIfy4Is8&#43;XuL1MCoDxBnWhQ2ddWSEhIQN8A=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:53257/favicon.ico">
@@ -55,7 +55,16 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="http://localhost:53257/404.html">
+  <meta property="og:site_name" content="SmartWallex - 加密货币聪明钱信息聚合平台">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="专业的加密货币聪明钱信息聚合平台，提供GitHub项目评测、市场分析和投资洞察">
+  <meta property="og:locale" content="zh-cn">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="专业的加密货币聪明钱信息聚合平台，提供GitHub项目评测、市场分析和投资洞察">
+
 </head>
 
 <body class="list" id="top">
@@ -98,6 +107,31 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://localhost:53257/" title="首页">
+                    <span>首页</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:53257/posts/" title="文章">
+                    <span>文章</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:53257/categories/" title="分类">
+                    <span>分类</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:53257/tags/" title="标签">
+                    <span>标签</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:53257/about/" title="关于">
+                    <span>关于</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
